kubernetes/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: ghcr.io/drill4j/admin:0.9.10
          ports:
            - containerPort: 8090
          livenessProbe:
            httpGet:
              path: /
              port: 8090
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30

---

apiVersion: v1
kind: Service
metadata:
  name: admin-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - port: 8090
      targetPort: 8090

---

apiVersion: v1
kind: Service
metadata:
  name: admin-node-port
spec:
  type: NodePort
  selector:
    app: admin
  ports:
    - port: 8090
      targetPort: 8090
