kubernetes/realworld.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: realworld

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld-api
  namespace: realworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realworld-api
  template:
    metadata:
      labels:
        app: realworld-api
    spec:
      containers:
        - name: realworld-api
          image: drill4j/real-world-spring-api:java-and-js-coverage-0.1.0
          ports:
            - containerPort: 9001
          args: ["java", "-jar", "/spring-boot-realworld-example-app-0.0.1-SNAPSHOT.jar"]
          volumeMounts:
            - name: agent-files
              mountPath: /data
      volumes:
        - name: agent-files
          emptyDir: {}

---

# realworld-api Service
apiVersion: v1
kind: Service
metadata:
  name: realworld-api
  namespace: realworld
spec:
  type: NodePort
  selector:
    app: realworld-api
  ports:
    - port: 9001
      targetPort: 9001
